@@ -67,6 +67,7 @@ GCRYPT_1.2 {
     gcry_ac_os_to_mpi; gcry_ac_data_encrypt_scheme; gcry_ac_data_decrypt_scheme;
     gcry_ac_data_sign_scheme; gcry_ac_data_verify_scheme;
     gcry_ac_data_to_sexp; gcry_ac_data_from_sexp;
+    gcry_ac_io_init; gcry_ac_io_init_va;
 
     gcry_prime_check; gcry_prime_generate; 
     gcry_prime_group_generator; gcry_prime_release_factors;
